packages/core/src/components/atoms/label/label.component.scss
:host {
    @apply flex gap-1 justify-center items-center px-2 desktop-xs:px-3 rounded;
    @apply h-[1.625rem];
    @apply text-sm font-semibold;

    .content {
        @apply hidden desktop-xs:flex items-center;
    }

    .circle {
        @apply hidden rounded-round h-[0.625rem] w-[0.625rem];
    }

    p-icon {
        @apply hidden text-xs #{!important};
    }
}

:host([variant='info']) {
    @apply bg-sky-light;
    @apply text-sky;

    .circle {
        @apply bg-sky;
    }
}

:host([variant='positive']) {
    @apply bg-positive-light;
    @apply text-positive;

    .circle {
        @apply bg-positive;
    }
}

:host([variant='unbiased']) {
    @apply bg-unbiased-light;
    @apply text-unbiased;

    .circle {
        @apply bg-unbiased;
    }
}

:host([variant='negative']) {
    @apply bg-negative-light;
    @apply text-negative;

    .circle {
        @apply bg-negative;
    }
}

:host([size='small']) {
    @apply h-4 min-w-[1rem] px-1 py-[1px];
    @apply text-xs justify-center;
    @apply leading-3;
}

:host([behavior='circle']) {
    .circle {
        @apply block desktop-xs:block;
    }
}

:host([behavior='icon']) {
    p-icon {
        @apply flex desktop-xs:flex #{!important};
    }
}

:host([behavior='text']) {
    p-icon {
        @apply hidden desktop-xs:hidden #{!important};
    }

    .circle {
        @apply hidden desktop-xs:hidden;
    }

    .content {
        @apply flex desktop-xs:flex;
    }
}

:host([behavior='combination']) {
    @apply px-0 desktop-xs:px-3;
    @apply w-[1.625rem] desktop-xs:w-auto;

    .circle {
        @apply hidden desktop-xs:block;
    }

    p-icon {
        @apply flex desktop-xs:hidden #{!important};
    }
}

:host([behavior='icon-only']) {
    @apply px-0 desktop-xs:px-0;
    @apply w-[1.625rem];

    .content {
        @apply hidden desktop-xs:hidden;
    }

    p-icon {
        @apply flex desktop-xs:flex #{!important};
    }
}

:host([behavior='icon-only'][size='small']) {
    @apply h-4 w-4;
}

:host([keep-mobile-content]),
:host([keep-mobile-content='true']) {
    .content {
        @apply flex desktop-xs:flex;
    }
}

